--- a/18-GameLanding-Pae/style.css
+++ b/18-GameLanding-Pae/style.css
@@ -5,7 +5,7 @@
 }
 
 .image-container{
-    background: url(https://wstatic-prod-boc.krafton.com/common/content/news/20241203/0SbOi7H9_thumb.jpg);
+    background: url(https://img.redbull.com/images/c_fill,g_auto,w_1200,h_630/f_auto,q_auto/redbullcom/2018/11/16/53c293b7-3a90-4930-9139-b8d1e69443c6/pubg);
     height: 100vh;
     background-position: top;
     background-repeat: no-repeat;
@@ -19,7 +19,10 @@ img{
     right: 50px;
     width: 100px;
     cursor: pointer;
-    animation: bounce 1s ease-in infinite;
+    animation-name: bounce;
+    animation-duration: 1s;
+    animation-timing-function: ease-in;
+    animation-iteration-count: infinite;
 }
 
 @keyframes bounce{
@@ -43,7 +46,7 @@ img{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: black;
+    background: #000;
     width: 100%;
     height: 100%;
     display: flex;
